--- a/CogMI2025/_config.yml
+++ b/CogMI2025/_config.yml
@@ -59,7 +59,7 @@ baseurl1: /cogmi2025
 # the internal "default list".
 #
 # Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
+# their entries' file path in the `include:` list.1
 #
 # exclude:
 #   - .sass-cache/
