--- a/cic2025/_config.yml
+++ b/cic2025/_config.yml
@@ -21,7 +21,7 @@
 title: CIC 2025
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-    43rd International ACM SIGIR Conference on Research and Development in Information Retrieval - July 25-30, 2020 (Xi'an, China)
+
 # baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
@@ -49,10 +49,10 @@ exclude:
   - notebooks/*
 
 # url: cic2025.github.io
-baseurl: /cic2025
-baseurl1: /cic2025
-# baseurl: ..
-# baseurl1: .
+# baseurl: /cic2025
+# baseurl1: /cic2025
+baseurl: ..
+baseurl1: .
 
 # Exclude from processing.
 # The following items will not be processed, by default.
