--- a/tps2025/_config.yml
+++ b/tps2025/_config.yml
@@ -52,7 +52,7 @@ baseurl: /tps2025
 baseurl1: /tps2025
 # baseurl: ..
 # baseurl1: .
-
+# bundle exec jekyll serve 
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
