--- a/tps2025/_config.yml
+++ b/tps2025/_config.yml
@@ -48,10 +48,10 @@ exclude:
   - notebooks/*
 
 # url: cic2025.github.io
-baseurl: /tps2025
-baseurl1: /tps2025
-# baseurl: ..
-# baseurl1: .
+# baseurl: /tps2025
+# baseurl1: /tps2025
+baseurl: ..
+baseurl1: .
 # bundle exec jekyll serve 
 # Exclude from processing.
 # The following items will not be processed, by default.
