--- a/cic2025/_config.yml
+++ b/cic2025/_config.yml
@@ -54,6 +54,7 @@ baseurl1: /cic2025
 # baseurl: ..
 # baseurl1: .
 
+# bundle exec jekyll serve 
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
