--- a/CogMI2025/_config.yml
+++ b/CogMI2025/_config.yml
@@ -52,7 +52,7 @@ baseurl: /cogmi2025
 baseurl1: /cogmi2025
 # baseurl: ..
 # baseurl1: .
-
+# bundle exec jekyll serve 
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
