updated: cfp extension

--- a/cic2025/_config.yml
+++ b/cic2025/_config.yml
@@ -49,10 +49,10 @@ exclude:
   - notebooks/*
 
 # url: cic2025.github.io
-# baseurl: /cic2025
-# baseurl1: /cic2025
-baseurl: ..
-baseurl1: .
+baseurl: /cic2025
+baseurl1: /cic2025
+# baseurl: ..
+# baseurl1: .
 
 # bundle exec jekyll serve 
 # Exclude from processing.
